1.0.2
- Add NotFoundException

1.0.1
- Add RegExp

1.0.0
-----

- Initial version:
Enum
ConfigurationException
PagingException
PaymentException