@@ -1,0 +1,11 @@
+<?php
+
+namespace Saritasa\Exceptions;
+
+/**
+ * Thrown, when trying to create a duplicate record
+ * @package App\Exceptions
+ */
+class EntityExistsException extends \LogicException
+{
+}
