@@ -2,6 +2,9 @@
 
 namespace Saritasa\Exceptions;
 
+/**
+ * Thrown, if you expect some data, but don't get it. Must specify message, explaining what happened.
+ */
 class NotFoundException extends \Exception
 {
 }
