@@ -1,0 +1,10 @@
+<?php
+
+namespace Saritasa\Exceptions;
+
+/**
+ * Thrown, when user tries to invoke feature, which is not implemented yet
+ */
+class NotImplementedException extends \Exception
+{
+}
